--- a/_components/Footer/index.html
+++ b/_components/Footer/index.html
@@ -1,6 +1,6 @@
 <footer class="footer">
 
-  <p>Follow Us:</p>
+  <div>Follow Us:</div>
   <div class="footer__social">
     <a href="https://sentimony.bandcamp.com" target="_blank">
       <span class="icon-bandcamp"></span>
@@ -18,10 +18,10 @@
       <span class="icon-soundcloud"></span>
       <span class="tooltip">soundcloud</span>
     </a>
-    <!-- <a href="https://twitter.com/sentimony" target="_blank">
+    <a href="https://twitter.com/sentimony" target="_blank">
         <span class="icon-twitter"></span>
         <span class="tooltip">twitter</span>
-    </a> -->
+    </a>
     <!-- <a href="https://www.mixcloud.com/sentimony" target="_blank">
         <span class="icon-mixcloud"></span>
         <span class="tooltip">mixcloud</span>
@@ -46,7 +46,7 @@
 
   <div class="footer__powered">
     <div>Web development by <a href="https://ihororlovskyi.com" target="_blank">Ihor Orlovskyi</a></div>
-    <div>Design by <a href="https://www.facebook.com/apivniuk" target="_blank">Anton Pivniuk</a></div>
+    <div>Design by <a href="https://rooooster.com" target="_blank">Anton Pivniuk</a></div>
   </div>
 
   <div class="footer__versions">
