--- a/_components/IframeSize/index.html
+++ b/_components/IframeSize/index.html
@@ -1,15 +1,15 @@
 {% if page.tracks_no == 4 %}
-  273px
+  tracks-4
 {% elsif page.tracks_no == 5 %}
-  306px
+  tracks-5
 {% elsif page.tracks_no == 7 %}
-  372px
+  tracks-7
 {% elsif page.tracks_no == 9 %}
-  438px
+  tracks-9
 {% elsif page.tracks_no == 10 %}
-  471px
+  tracks-10
 {% elsif page.tracks_no == 11 %}
-  504px
+  tracks-11
 {% elsif page.tracks_no == 12 %}
-  537px
+  tracks-12
 {% endif %}
