add og-image cell

--- a/_pages/evens.html
+++ b/_pages/evens.html
@@ -3,6 +3,7 @@ layout: default
 title: Events
 description: Events of Sentimony Records
 permalink: /events/
+og-image: 
 ---
 
 <section class="list">
