--- a/_pages/home.html
+++ b/_pages/home.html
@@ -3,6 +3,7 @@ layout: default
 titleAfter: Electronic Music Label
 description: Sentimony Records - Electronic music label from Kyiv, Ukraine
 permalink: /
+og-image: https://content.sentimony.com/assets/img/og-images/sentimony/home.jpg
 ---
 
 {% include Hero/index.html %}
