--- a/_pages/releases.html
+++ b/_pages/releases.html
@@ -3,6 +3,7 @@ layout: default
 title: Releases
 description: Releases of Sentimony Records
 permalink: /releases/
+og-image: 
 ---
 
 {% include ReleasesList/index.html %}
