add more credits at releases

--- a/_components/Hero/index.html
+++ b/_components/Hero/index.html
@@ -4,7 +4,7 @@
   <div class="content">
     <hgroup>
       <h1>Sentimony Records</h1>
-      <h2>Electronic music label</h2>
+      <h2>Psychill Music Label</h2>
     </hgroup>
   </div>
 </div>
