--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,13 +1,14 @@
 ---
 layout: default
-titleAfter: Psychill Music Label
-description: Sentimony Records is an independent record label started in Ukraine during the autumn 2006 by Irukanji with the main goal to contribute the growth of the psychedelic chillout scene.
+title: About
+description: About Sentimony Records
 permalink: /
 og-image: https://content.sentimony.com/assets/img/og-images/sentimony/home.jpg
 ---
 
-<!-- {% include ReleasesListSwiper/index.html %} -->
 {% include Hero/index.html %}
+
+Sentimony Records is an independent record label started in Ukraine during the autumn 2006 by Irukanji with the main goal to contribute the growth of the psychedelic chillout scene.
 
 <!-- <section class="list">
   <h3>Latest Releases</h3>
