--- a/_pages/news.html
+++ b/_pages/news.html
@@ -3,7 +3,7 @@ layout: default
 title: News
 description: News of Sentimony Records
 permalink: /news/
-og-image: 
+og-image: https://content.sentimony.com/assets/img/og-images/sentimony/home.jpg
 ---
 
 <section class="list">
