--- a/_pages/releases.html
+++ b/_pages/releases.html
@@ -3,7 +3,7 @@ layout: default
 title: Releases
 description: Releases of Sentimony Records
 permalink: /releases/
-og-image: 
+og-image: https://content.sentimony.com/assets/img/og-images/sentimony/home.jpg
 ---
 
 {% include ReleasesList/index.html %}
