--- a/_components/LogoLink/index.html
+++ b/_components/LogoLink/index.html
@@ -3,6 +3,6 @@
   <img class="logolink__logo" src="{{ site.baseurl }}/assets/img/svg-icons/sentimony-records-logo.svg" alt="Sentimony Records Logo SVG">
   <div class="logolink__text">
     <div class="logolink__title">Sentimony Records</div>
-    <div class="logolink__subtitle">Electronic Music Label</div>
+    <div class="logolink__subtitle">Psychill Music Label</div>
   </div>
 </a>
