--- a/_pages/evens.html
+++ b/_pages/evens.html
@@ -3,7 +3,7 @@ layout: default
 title: Events
 description: Events of Sentimony Records
 permalink: /events/
-og-image: 
+og-image: https://content.sentimony.com/assets/img/og-images/sentimony/home.jpg
 ---
 
 <section class="list">
