--- a/_pages/about.html
+++ b/_pages/about.html
@@ -10,6 +10,9 @@ og-image: https://content.sentimony.com/assets/img/og-images/sentimony/home.jpg
 
 Sentimony Records is an independent record label started in Ukraine during the autumn 2006 by Irukanji with the main goal to contribute the growth of the psychedelic chillout scene.
 
+Recently all Sentimony Records releases available for free download.<br>
+We will be grateful for your feedback at bandcamp.
+
 <!-- <section class="list">
   <h3>Latest Releases</h3>
   {% for i in site.categories.releases limit: 4 %}
