--- a/_pages/home.html
+++ b/_pages/home.html
@@ -9,14 +9,14 @@ og-image: https://content.sentimony.com/assets/img/og-images/sentimony/home.jpg
 <!-- {% include ReleasesListSwiper/index.html %} -->
 {% include Hero/index.html %}
 
-<!-- <section class="list">
+<!-- <section>
   <h3>Latest Releases</h3>
   {% for i in site.categories.releases limit: 4 %}
   <a href="{{ i.url }}">
-    <div class="outline">
+    <div>
       <img src="https://content.sentimony.com/assets/img/releases/medium/{% if i.cover %}{{ i.cat_no }}/{{ i.slug }}.jpg{% else %}artwork-in-progress.jpg{% endif %}">
     </div>
-    <div class="title">{{ i.title }}</div>
+    <div>{{ i.title }}</div>
   </a>
   {% endfor %}
 </section> -->
