--- a/_components/Friends/index.html
+++ b/_components/Friends/index.html
@@ -1,21 +1,21 @@
-<section class="friends">
+<section>
   <h3>Friends</h3>
-  <div class="friends-list">
+  <div>
   {% for i in site.data.Friends.config %}
-    <div class="friend-item">
-      <div class="content">
-        <div class="title">{{ i.title }}</div>
+    <div>
+      <div>
+        <div>{{ i.title }}</div>
         {% if i.site %}
-            <a href="{{ i.site }}"><span class="icon-public"></span></a>
+          <a href="{{ i.site }}"><span class="icon-public"></span></a>
         {% endif %}
         {% if i.bandcamp %}
-            <a href="{{ i.bandcamp }}"><span class="icon-bandcamp"></span></a>
+          <a href="{{ i.bandcamp }}"><span class="icon-bandcamp"></span></a>
         {% endif %}
         {% if i.facebook %}
-            <a href="{{ i.facebook }}"><span class="icon-facebook"></span></a>
+          <a href="{{ i.facebook }}"><span class="icon-facebook"></span></a>
         {% endif %}
         {% if i.soundcloud %}
-            <a href="{{ i.soundcloud }}"><span class="icon-soundcloud"></span></a>
+          <a href="{{ i.soundcloud }}"><span class="icon-soundcloud"></span></a>
         {% endif %}
       </div>
     </div>
