--- a/_pages/menu.html
+++ b/_pages/menu.html
@@ -74,8 +74,8 @@ permalink: /menu/
 
       background-color: #2C8DFB;
 
-      /*margin: 14px;
-      border-radius: 5px;*/
+      margin: 14px;
+      border-radius: 5px;
     }
     .menu-button .bar:nth-of-type(1) {
       margin-top: 0px;
