--- a/_components/ReleaseListSwiper/index.html
+++ b/_components/ReleaseListSwiper/index.html
@@ -1,14 +1,14 @@
-<div class="release-list-swiper">
+<div class="release-list-swiper {{ include.class}}">
   <div class="release-list-swiper__title">Our releases</div>
-  <div class="swiper-container release-list-swiper__container {{ include.class}}">
+  <div class="swiper-container release-list-swiper__container">
     <div class="swiper-wrapper">
       {% for i in site.categories.releases %}
       <a href="{{ i.url }}" class="swiper-slide release-list-swiper__item{% if page.url contains i.slug %} is-selected{% endif %}">
         <div class="release-list-swiper__item-cover">
           {% if i.cover %}
           <img class="release-list-swiper__item-cover-img"
-            src="https://content.sentimony.com/assets/img/releases/small/{{ i.cat_no }}/{{ i.slug }}.jpg"
-            data-retina="https://content.sentimony.com/assets/img/releases/small-retina/{{ i.cat_no }}/{{ i.slug }}.jpg"
+            data-layzr="https://content.sentimony.com/assets/img/releases/small/{{ i.cat_no }}/{{ i.slug }}.jpg"
+            data-layzr-retina="https://content.sentimony.com/assets/img/releases/small-retina/{{ i.cat_no }}/{{ i.slug }}.jpg"
           >
           {% else %}
           <div class="release-list-swiper__item-cover-coming">Artwork<br>in progress</div>
