--- a/_components/ReleasePage/index.html
+++ b/_components/ReleasePage/index.html
@@ -10,9 +10,8 @@
         {% if page.cover %}
         <a class="release-page__cover-link" href="https://content.sentimony.com/assets/img/releases/large/{{ page.cat_no }}/{{ page.slug }}.jpg">
           <img class="release-page__cover-img lazyload"
-            src="https://content.sentimony.com/assets/img/releases/medium/{{ page.cat_no }}/{{ page.slug }}.jpg"
-            data-src="https://content.sentimony.com/assets/img/releases/medium/{{ page.cat_no }}/{{ page.slug }}.jpg"
-            data-srcset="https://content.sentimony.com/assets/img/releases/medium-retina/{{ page.cat_no }}/{{ page.slug }}.jpg"
+            src="https://content.sentimony.com/assets/img/releases/micro/{{ page.cat_no }}/{{ page.slug }}.jpg"
+            data-srcset="https://content.sentimony.com/assets/img/releases/medium/{{ page.cat_no }}/{{ page.slug }}.jpg 1x, https://content.sentimony.com/assets/img/releases/medium-retina/{{ page.cat_no }}/{{ page.slug }}.jpg 2x"
           >
         </a>
         {% else %}
