--- a/_components/FooterBlock/index.html
+++ b/_components/FooterBlock/index.html
@@ -1,6 +1,6 @@
-<footer class="footer">
+<footer class="footer-block">
 
-  <div class="footer__menu">
+  <div class="footer-block__menu">
     <a href="{{ site.baseurl }}/" class="header__main-menu-link{% if page.url == '/'%} is-selected{% endif %}">Home</a>
     <a href="{{ site.baseurl }}/news/" class="header__main-menu-link{% if page.url contains 'news' %} is-selected{% endif %}">News</a>
     <a href="{{ site.baseurl }}/releases/" class="header__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
@@ -11,7 +11,7 @@
   </div>
 
   <div>Follow Us:</div>
-  <div class="footer__social">
+  <div class="footer-block__social">
     <a href="https://sentimony.bandcamp.com" target="_blank">
       <span class="icon-bandcamp"></span>
       <span class="tooltip">bandcamp</span>
@@ -42,24 +42,24 @@
     </a> -->
   </div>
 
-  <div class="footer__labels">
+  <div class="footer-block__labels">
     <a href="https://sentimony.com" class="active">Sentimony Records</a>
     <a href="https://aquadeepmusic.sentimony.com">Aqua Deep Music</a>
     <a href="https://lookinglook.sentimony.com">Lookinglook Records</a>
   </div>
 
-  <div class="footer__copyright">
+  <div class="footer-block__copyright">
     <div>2006 - 2017 © Sentimony Records</div>
     <div>All Rights Reserved</div>
     <div><span class="icon-sentimony-records-logo"></span></div>
   </div>
 
-  <div class="footer__powered">
+  <div class="footer-block__powered">
     <div>Web development by <a href="https://ihororlovskyi.com" target="_blank">Ihor Orlovskyi</a></div>
     <div>Design by <a href="https://rooooster.com" target="_blank">Anton Pivniuk</a></div>
   </div>
 
-  <div class="footer__versions">
+  <div class="footer-block__versions">
     <a href="https://sentimony.com" class="active">jekyll</a>
     <a href="https://gatsby.sentimony.com">gatsby</a>
     <a href="https://nuxt.sentimony.com">nuxt</a>
