upd goodshare btns styles

--- a/_components/ReleasePage/index.html
+++ b/_components/ReleasePage/index.html
@@ -117,20 +117,24 @@
     <p>Share:</p>
     <p class="release-page-content__social">
       <a href="#" class="release-page-content__btn-facebook" data-social="facebook">
-        fb
+        <!-- fb -->
+        <img class="release-page-content__btn-icon" src="{{ site.baseurl }}/assets/img/svg-icons/facebook.svg">
         <!-- <span class="icon-facebook"></span> -->
-        <span data-counter="facebook"></span>
+        <span class="release-page-content__btn-counter" data-counter="facebook"></span>
       </a>
       <a href="#" class="release-page-content__btn-vkontakte" data-social="vkontakte">
         vk
-        <span data-counter="vkontakte"></span>
+        <!-- <img class="release-page-content__btn-icon" src="{{ site.baseurl }}/assets/img/svg-icons/vkontakte.svg"> -->
+        <span class="release-page-content__btn-counter" data-counter="vkontakte"></span>
       </a>
       <a href="#" class="release-page-content__btn-googleplus" data-social="googleplus">
-        gp
-        <span data-counter="googleplus"></span>
+        <!-- gp -->
+        <img class="release-page-content__btn-icon" src="{{ site.baseurl }}/assets/img/svg-icons/googleplus.svg">
+        <span class="release-page-content__btn-counter" data-counter="googleplus"></span>
       </a>
       <a href="#" class="release-page-content__btn-twitter" data-social="twitter">
-        tw
+        <!-- tw -->
+        <img class="release-page-content__btn-icon" src="{{ site.baseurl }}/assets/img/svg-icons/twitter.svg">
         <!-- <span class="icon-twitter"></span> -->
       </a>
     </p>
