add vkontakte icon

--- a/_components/ReleasePage/index.html
+++ b/_components/ReleasePage/index.html
@@ -123,8 +123,8 @@
         <span class="release-page-content__btn-counter" data-counter="facebook"></span>
       </a>
       <a href="#" class="release-page-content__btn-vkontakte" data-social="vkontakte">
-        vk
-        <!-- <img class="release-page-content__btn-icon" src="{{ site.baseurl }}/assets/img/svg-icons/vkontakte.svg"> -->
+        <!-- vk -->
+        <img class="release-page-content__btn-icon" src="{{ site.baseurl }}/assets/img/svg-icons/vkontakte.svg">
         <span class="release-page-content__btn-counter" data-counter="vkontakte"></span>
       </a>
       <a href="#" class="release-page-content__btn-googleplus" data-social="googleplus">
