--- a/_components/MainMenu/index.html
+++ b/_components/MainMenu/index.html
@@ -4,7 +4,7 @@
   {% include LogoLink/index.html %}
 
   <nav class="main-menu__main-menu">
-    <a href="{{ site.baseurl }}/release/tentura-beyond-illusion/" class="main-menu__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
+    <a href="{{ site.baseurl }}/release/va-the-ten/" class="main-menu__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
     <!-- <a href="{{ site.baseurl }}/news/" class="main-menu__main-menu-link{% if page.url contains 'news' %} is-selected{% endif %}">News</a>
     <a href="{{ site.baseurl }}/releases/" class="main-menu__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
     <a href="{{ site.baseurl }}/artists/" class="main-menu__main-menu-link{% if page.url contains 'artist' %} is-selected{% endif %}">Artists</a>
@@ -35,7 +35,7 @@
     </a> -->
   </nav>
 
-  <a href="{{ site.baseurl }}/release/tentura-beyond-illusion/" class="main-menu__mob-menu-button">
+  <a href="{{ site.baseurl }}/release/va-the-ten/" class="main-menu__mob-menu-button">
     <img class="main-menu__mob-menu-button-img" src="{{ site.baseurl }}/assets/img/svg-icons/menu.svg">
   </a>
 
